# magician_grabber_annotator

./: CMakeLists.txt  Dockerfile  HTTPStream.py  README.md  SAM.py  averageimages.py  classifierGrading.py  comparePNMPNG.py  compressDataset.py  datasetCreator.py  datasetSelector.py  downloadAllFrames.py  examineTiles.py  folderStream.py  hash.py  iconPicker.py  magnifier.py  mergeDatasets.py  package.xml  plotPerf.py  principleComponentAnalysis.py  readData.py  requirements.txt  runAnnotator.sh  runDocker.sh  sam.py  sam_caps.py  stitcher.py  streamDataset.py  tactilePlotter.py  tileExplorer.py  uploadAnnotations.py  visualizeData.py  wxAcquisition.py  wxAnnotator.py
default/: colorFrame_0_00000.pnm.json
doc/: annotator_guide.md  data_access_guide.md  guide.md
scripts/: downloadDataset.sh  setup.sh
